Fix alignment for admin view, and enable individual scrolling for component list and preview (formarea) column

--- a/src/overrideFormioStyles.less
+++ b/src/overrideFormioStyles.less
@@ -11,12 +11,15 @@
 
 @media screen and (min-width: 40rem) {
   .formbuilder {
+    height: calc(100vh - 12.9rem);
     display: grid;
     grid-template-columns: 14rem minmax(20rem, 50rem);
     grid-gap: 2rem;
+    align-items: start;
     margin: 0 auto;
     max-width: 66rem;
     min-width: 36rem;
+    overflow: hidden;
   }
 }
 
